--- a/package.json
+++ b/package.json
@@ -16,5 +16,6 @@
   "dependencies": {
     "@fluent/bundle": "^0.18.0",
     "axios": "^1.3.6"
-  }
+  },
+  "repository": "https://github.com/hydroper/typescript-ftl"
 }
